--- a/src/app/layout/button/find-button/find-button.component.html
+++ b/src/app/layout/button/find-button/find-button.component.html
@@ -1,4 +1,6 @@
 <div class="find-button">
-  <button><ng-content>Tìm kỳ thi</ng-content></button>
+  <button>
+    <ng-content>Tìm kỳ thi</ng-content>
+  </button>
 </div>
 
