--- a/src/app/pages/student/exam-detail/exam-detail.component.html
+++ b/src/app/pages/student/exam-detail/exam-detail.component.html
@@ -1,41 +1,43 @@
-<div class="main-container" (click)="closePasswordModal($event)">
+<div (click)="closePasswordModal($event)" class="main-container">
   <app-header-student></app-header-student>
-  <app-search-bar><app-find-button>Tìm bài thi</app-find-button></app-search-bar>
-  <main class="exam-detail__wrap" (click)="closePasswordModal($event)">
+  <app-search-bar>
+    <app-find-button>Tìm bài thi</app-find-button>
+  </app-search-bar>
+  <main (click)="closePasswordModal($event)" class="exam-detail__wrap">
     <table>
       <thead>
-        <tr>
-          <th>{{ examType }} - {{ examName }} / {{ examCode }}</th>
-          <th>Thời gian</th>
-          <th>Ngày bắt đầu</th>
-          <th>Trạng thái</th>
-        </tr>
+      <tr>
+        <th>{{ examType }} - {{ examName }} / {{ examCode }}</th>
+        <th>Thời gian</th>
+        <th>Ngày bắt đầu</th>
+        <th>Trạng thái</th>
+      </tr>
       </thead>
       <tbody>
-        <tr
-          *ngFor="let exam of exams"
-          (click)="toggleUserInfoSelection($event)"
-        >
-          <td>{{ exam.name }}</td>
-          <td>{{ exam.duration }}</td>
-          <td>{{ exam.dateCreated }}</td>
-          <td>{{ exam.status }}</td>
-        </tr>
+      <tr
+        (click)="toggleUserInfoSelection($event)"
+        *ngFor="let exam of exams"
+      >
+        <td>{{ exam.name }}</td>
+        <td>{{ exam.duration }}</td>
+        <td>{{ exam.dateCreated }}</td>
+        <td>{{ exam.status }}</td>
+      </tr>
       </tbody>
     </table>
 
-    <div class="password-form" #passwordForm [class.visible]="isPassword">
+    <div #passwordForm [class.visible]="isPassword" class="password-form">
       <div class="container">
         <h2>Nhập password bài thi</h2>
         <div class="input-container">
           <input
-            *ngFor="let input of inputs; let i = index"
             #inputBox
-            type="text"
-            maxlength="1"
-            class="input-box"
             (input)="onInput(i, $event)"
             (keydown)="onKeyDown(i, $event)"
+            *ngFor="let input of inputs; let i = index"
+            class="input-box"
+            maxlength="1"
+            type="text"
           />
         </div>
       </div>
