--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -11,7 +11,7 @@
       <th>Trạng thái</th>
       <th>Dạng đề bài</th>
     </tr>
-    <tr (click)="navigateToExamDetail(exam)" *ngFor="let exam of examList">
+    <tr (click)="navigateToExamPeriodDetail(exam)" *ngFor="let exam of examList">
       <td>
         <p class="exam-name">{{ exam.name }} - {{ exam.description }}</p>
         <p class="class-code">Mã lớp: {{ exam.id }}</p>
