feat: update user routing and enhance user form for student and teacher components

--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -22,7 +22,11 @@
         <a class="change-profile-pic" href="#" id="change-avatar">Thay đổi ảnh đại diện</a>
       </div>
     </div>
-    <div id="hocsinh"><h4> Học sinh </h4></div>
+    <div id="hocsinh">
+      <h4>
+        <ng-content select="[role]"></ng-content>
+      </h4>
+    </div>
 
     <!-- Phần thông tin cá nhân -->
     <div class="personal-info-section">
