--- a/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.html
+++ b/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.html
@@ -2,100 +2,64 @@
 <div class="container">
   <div class="exam-period-info">
     <figure class="image-wrap">
-      <img src="/images/create-exam-info-img.png" alt="">
+      <img ngSrc="/images/create-exam-info-img.png" alt="" height="1333" width="2000">
     </figure>
 
     <div class="form-wrap">
       <form (ngSubmit)="onSubmit()" [formGroup]="examForm">
         <h2 class="exam-info">Thông tin kỳ thi</h2>
+
         <div class="row-wrapper">
           <div class="input-wrapper">
-            <label for="ten-ky-thi">Tên kỳ thi</label>
-            <input formControlName="tenKyThi" id="ten-ky-thi" type="text" />
+            <label for="exam_sessions_name">Tên kỳ thi</label>
+            <input formControlName="exam_sessions_name" id="exam_sessions_name" type="text" />
             <div
-              *ngIf="
-                examForm.get('tenKyThi')?.invalid &&
-                examForm.get('tenKyThi')?.touched
-              "
-              class="error"
-            >
+              *ngIf="examForm.get('exam_sessions_name')?.invalid && examForm.get('exam_sessions_name')?.touched"
+              class="error">
               Tên kỳ thi không được để trống.
             </div>
           </div>
+
           <div class="input-wrapper">
-            <label for="loai-ky-thi">Thông tin bổ sung</label>
-            <input formControlName="loaiKyThi" id="ten-ky-thi" type="text" />
-            <div
-              *ngIf="
-                examForm.get('loaiKyThi')?.invalid &&
-                examForm.get('loaiKyThi')?.touched
-              "
-              class="error"
-            >
-              Loại kỳ thi không được để trống.
-            </div>
+            <label for="exam_sessions_description">Thông tin bổ sung</label>
+            <input formControlName="exam_sessions_description" id="exam_sessions_description" type="text" />
           </div>
         </div>
 
         <div class="input-wrapper">
-          <label for="mat-khau-ky-thi">Mật khẩu kỳ thi</label>
-          <input
-            formControlName="matKhauKyThi"
-            id="mat-khau-ky-thi"
-            maxlength="6"
-            type="password"
-          />
+          <label for="exam_sessions_password">Mật khẩu kỳ thi</label>
+          <input formControlName="exam_sessions_password" id="exam_sessions_password" maxlength="6" type="password" />
           <div
-            *ngIf="
-              examForm.get('matKhauKyThi')?.invalid &&
-              examForm.get('matKhauKyThi')?.touched
-            "
-            class="error"
-          >
+            *ngIf="examForm.get('exam_sessions_password')?.invalid && examForm.get('exam_sessions_password')?.touched"
+            class="error">
             Mật khẩu phải là 6 ký tự.
           </div>
         </div>
 
         <div class="row-wrapper">
           <div class="input-wrapper">
-            <label for="thoiGianBatDau">Thời gian bắt đầu:</label>
-            <input
-              formControlName="thoiGianBatDau"
-              id="thoiGianBatDau"
-              type="datetime-local"
-            />
+            <label for="exam_sessions_start_date">Thời gian bắt đầu:</label>
+            <input formControlName="exam_sessions_start_date" id="exam_sessions_start_date" type="datetime-local" />
             <div
-              *ngIf="
-                examForm.get('thoiGianBatDau')?.invalid &&
-                examForm.get('thoiGianBatDau')?.touched
-              "
-              class="error"
-            >
+              *ngIf="examForm.get('exam_sessions_start_date')?.invalid && examForm.get('exam_sessions_start_date')?.touched"
+              class="error">
               Vui lòng chọn thời gian bắt đầu.
             </div>
           </div>
 
           <div class="input-wrapper">
-            <label for="thoiGianKetThuc">Thời gian kết thúc:</label>
-            <input
-              formControlName="thoiGianKetThuc"
-              id="thoiGianKetThuc"
-              type="datetime-local"
-            />
+            <label for="exam_sessions_end_date">Thời gian kết thúc:</label>
+            <input formControlName="exam_sessions_end_date" id="exam_sessions_end_date" type="datetime-local" />
             <div
-              *ngIf="
-                examForm.get('thoiGianKetThuc')?.invalid &&
-                examForm.get('thoiGianKetThuc')?.touched
-              "
-              class="error"
-            >
+              *ngIf="examForm.get('exam_sessions_end_date')?.invalid && examForm.get('exam_sessions_end_date')?.touched"
+              class="error">
               Vui lòng chọn thời gian kết thúc.
             </div>
           </div>
         </div>
 
-        <button class="submit" [disabled]="examForm.invalid" type="submit">Tạo kỳ thi</button>
-        <button class="back">Quay lại</button>
+        <button [disabled]="examForm.invalid" type="submit">Tạo kỳ thi</button>
+        <button class="back" type="button" (click)="goBack()">Quay lại</button>
       </form>
     </div>
   </div>
