--- a/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.scss
+++ b/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.scss
@@ -45,19 +45,25 @@ form {
     width: 100%;
   }
 
-  .submit {
+  button{
+    padding: 10px;
     margin-top: 20px;
-    padding: 15px;
     background: var(--primary-color);
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     transition: 0.3s;
-
-    &:hover {
-      background: #038658;
-    }
+  }
+  button:hover {
+    background: #008646;
+  }
+  .back{
+    background: #ccc;
+    color: black;
+  }
+  .back:hover{
+    background: #b3b3b3;
   }
 }
 
