feat: enhance exam management interface with search functionality and improved layout

--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -3,7 +3,9 @@
     <div class="logo">Online Exam Portal</div>
     <nav class="breadcrumb">
       <span>►</span>
-      <span>Tạo kì thi</span>
+      <span>Kỳ thi: {{exam_session_name}}</span>
+      <span>►</span>
+      <span>Tạo đề mới</span>
     </nav>
   </div>
   <div class="return-button">
