--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
@@ -93,8 +93,10 @@ li {
 
 main {
   width: 100%;
-  height: 1000px;
+  height: 100vh; // Chiều cao cố định trừ đi header
   padding-top: 80px;
   padding-left: 15%;
   background: #ccc;
+  overflow-y: auto; // Cho phép cuộn khi nội dung dài hơn
 }
+
