--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -11,14 +11,14 @@
       <th>Trạng thái</th>
       <th>Dạng đề bài</th>
     </tr>
-    <tr (click)="navigateToExamPeriodDetail(exam)" *ngFor="let exam of examList">
+    <tr (click)="navigateExamSessionDashBoard()" *ngFor="let examSession of examSessionList">
       <td>
-        <p class="exam-name">{{ exam.name }} - {{ exam.description }}</p>
-        <p class="class-code">Mã lớp: {{ exam.id }}</p>
+        <p class="exam-name">{{ examSession.name }} - {{ examSession.description }}</p>
+        <p class="class-code">Mã lớp: {{ examSession.code }}</p>
       </td>
-      <td>{{ exam.createDate }}</td>
-      <td>{{ exam.status }}</td>
-      <td>{{ exam.type }}</td>
+      <td>{{ examSession.create_date }}</td>
+      <td>{{ examSession.status }}</td>
+      <td>{{ examSession.type }}</td>
     </tr>
     </tbody>
   </table>
