--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -8,6 +8,8 @@
     <tr>
       <th>Tên kỳ thi đã tạo</th>
       <th>Ngày tạo</th>
+      <th>Ngày mở</th>
+      <th>Ngày đóng</th>
       <th>Trạng thái</th>
       <th>Dạng đề bài</th>
     </tr>
@@ -16,7 +18,9 @@
         <p class="exam-name">{{ examSession.name }} - {{ examSession.description }}</p>
         <p class="class-code">Mã lớp: {{ examSession.code }}</p>
       </td>
-      <td>{{ examSession.create_date }}</td>
+      <td>{{ examSession.createDate | date: 'dd-MM-yyyy HH:mm:ss' }}</td>
+      <td>{{ examSession.startDate | date: 'dd-MM-yyyy HH:mm:ss' }}</td>
+      <td>{{ examSession.endDate | date: 'dd-MM-yyyy HH:mm:ss' }}</td>
       <td>{{ examSession.status }}</td>
       <td>{{ examSession.type }}</td>
     </tr>
