feat: update exam details with simplified names, descriptions, and types

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -3,7 +3,7 @@
     <img ngSrc="/icon/find_icon.svg" alt="search icon" class="search-icon" height="16" width="16">
     <input type="text" [(ngModel)]="searchTerm" (keyup.enter)="filterExam()" (input)="filterExam()" placeholder="Nhập tên đề thi">
     <div class="create-button">
-      <button (click)="navigateToCreatExam()" >tạo kỳ thi</button>
+      <button (click)="navigateToCreatExam()" >Tạo đề mới</button>
     </div>
   </div>
 </div>
