--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -29,16 +29,19 @@ $toggle-checked-bg: #555;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 180px;
+      min-width: 180px;
       height: 50px;
-      background: #ededed;
+      background: #fff;
       border-radius: 25px;
 
       .avatar {
-        width: 50px;
-        height: 50px;
-        background: #b3b3b3;
-        border-radius: 50%;
+        img{
+          width: 48px;
+          height: 50px;
+          background: #b3b3b3;
+          border-radius: 50%;
+          margin-top: 6px;
+        }
       }
 
       .drop-down-arrow {
