feat: enhance exam session dashboard with student participation table and styling improvements

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.html
@@ -9,26 +9,47 @@
       <div class="row-wrapper">
         <div class="input-wrapper">
           <label for="exam_sessions_name">Tên kỳ thi</label>
-          <input formControlName="exam_sessions_name" id="exam_sessions_name" type="text" />
+          <input
+            formControlName="exam_sessions_name"
+            id="exam_sessions_name"
+            type="text"
+          />
           <div
-            *ngIf="examForm.get('exam_sessions_name')?.invalid && examForm.get('exam_sessions_name')?.touched"
-            class="error">
+            *ngIf="
+              examForm.get('exam_sessions_name')?.invalid &&
+              examForm.get('exam_sessions_name')?.touched
+            "
+            class="error"
+          >
             Tên kỳ thi không được để trống.
           </div>
         </div>
 
         <div class="input-wrapper">
           <label for="exam_sessions_description">Thông tin bổ sung</label>
-          <input formControlName="exam_sessions_description" id="exam_sessions_description" type="text" />
+          <input
+            formControlName="exam_sessions_description"
+            id="exam_sessions_description"
+            type="text"
+          />
         </div>
       </div>
 
       <div class="input-wrapper">
         <label for="exam_sessions_password">Mật khẩu kỳ thi</label>
-        <input formControlName="exam_sessions_password" id="exam_sessions_password" maxlength="6" type="password" />
+        <input
+          formControlName="exam_sessions_password"
+          id="exam_sessions_password"
+          maxlength="6"
+          type="password"
+        />
         <div
-          *ngIf="examForm.get('exam_sessions_password')?.invalid && examForm.get('exam_sessions_password')?.touched"
-          class="error">
+          *ngIf="
+            examForm.get('exam_sessions_password')?.invalid &&
+            examForm.get('exam_sessions_password')?.touched
+          "
+          class="error"
+        >
           Mật khẩu phải là 6 ký tự.
         </div>
       </div>
@@ -36,26 +57,73 @@
       <div class="row-wrapper">
         <div class="input-wrapper">
           <label for="exam_sessions_start_date">Thời gian bắt đầu:</label>
-          <input formControlName="exam_sessions_start_date" id="exam_sessions_start_date" type="datetime-local" />
+          <input
+            formControlName="exam_sessions_start_date"
+            id="exam_sessions_start_date"
+            type="datetime-local"
+          />
           <div
-            *ngIf="examForm.get('exam_sessions_start_date')?.invalid && examForm.get('exam_sessions_start_date')?.touched"
-            class="error">
+            *ngIf="
+              examForm.get('exam_sessions_start_date')?.invalid &&
+              examForm.get('exam_sessions_start_date')?.touched
+            "
+            class="error"
+          >
             Vui lòng chọn thời gian bắt đầu.
           </div>
         </div>
 
         <div class="input-wrapper">
           <label for="exam_sessions_end_date">Thời gian kết thúc:</label>
-          <input formControlName="exam_sessions_end_date" id="exam_sessions_end_date" type="datetime-local" />
+          <input
+            formControlName="exam_sessions_end_date"
+            id="exam_sessions_end_date"
+            type="datetime-local"
+          />
           <div
-            *ngIf="examForm.get('exam_sessions_end_date')?.invalid && examForm.get('exam_sessions_end_date')?.touched"
-            class="error">
+            *ngIf="
+              examForm.get('exam_sessions_end_date')?.invalid &&
+              examForm.get('exam_sessions_end_date')?.touched
+            "
+            class="error"
+          >
             Vui lòng chọn thời gian kết thúc.
           </div>
         </div>
       </div>
 
-      <button [disabled]="examForm.invalid" type="submit">Cập nhật thông tin kỳ thi</button>
+      <button [disabled]="examForm.invalid" type="submit">
+        Cập nhật thông tin kỳ thi
+      </button>
     </form>
+  </div>
+  <div class="border"></div>
+  <div class="participating-student-list">
+    <div class="form-wrap">
+      <h2 class="exam-info participating-student__heading">
+        Học sinh tham gia
+      </h2>
+      <div class="table-wrap">
+        <table class="table">
+          <tr>
+            <th>Mssv</th>
+            <th>Lớp</th>
+            <th>Tên</th>
+          </tr>
+
+          <tr>
+            <td>012345</td>
+            <td>67MHT2</td>
+            <td>Nguyễn Văn A</td>
+          </tr>
+
+          <tr>
+            <td>012367</td>
+            <td>67MHT2</td>
+            <td>Nguyễn Văn B</td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
