feat: implement question bank layout with styling and question details

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
@@ -1,1 +1,38 @@
-<p>question-bank works!</p>
+<div class="container" style="height: 10000px">
+  <div class="number-question-wrap">
+    <div class="number-question">
+      <p>Số câu: 10</p>
+      <p>Tổng điểm: 10</p>
+    </div>
+  </div>
+
+  <div class="question-list-wrap">
+    <ul class="question-list">
+      <li class="question">
+        <p class="question-name">
+          Câu 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
+          harum!
+        </p>
+        <p class="correct-answer">Đáp án đúng</p>
+        <div class="answer correct">Lorem ipsum dolor sit amet.</div>
+        <p class="other-answer">Đáp án còn lại</p>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+      </li>
+
+      <li class="question">
+        <p class="question-name">
+          Câu 2: Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
+          harum!
+        </p>
+        <p class="correct-answer">Đáp án đúng</p>
+        <div class="answer correct">Lorem ipsum dolor sit amet.</div>
+        <p class="other-answer">Đáp án còn lại</p>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+        <div class="answer">Lorem ipsum dolor sit amet.</div>
+      </li>
+    </ul>
+  </div>
+</div>
