feat: add auto-generate exam creation component and update routing

--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -17,7 +17,7 @@
     <img alt="Kho học liệu" class="option-icon" height="512" ngSrc="/icon/autoGenerateExam.png" width="512"/>
     <h3>Sử dụng kho học liệu</h3>
     <p>Sử dụng lại những câu hỏi biên soạn để sinh đề tự động</p>
-    <button (click)="navigateToECWF()" class="primary-btn">Chọn</button>
+    <button (click)="navigateToAutoGenerate()" class="primary-btn">Chọn</button>
   </div>
 
   <div class="option-card">
