--- a/src/app/layout/button/create-button/create-button.component.html
+++ b/src/app/layout/button/create-button/create-button.component.html
@@ -1,3 +1,3 @@
 <div class="create-button">
-  <button (click)="navigateToCreateExam()">tạo kỳ thi</button>
+  <button (click)="navigateToCreateExam()">Tạo kỳ thi</button>
 </div>
