--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="search-bar">
   <div class="search">
     <img ngSrc="/icon/find_icon.svg" alt="search icon" class="search-icon" height="16" width="16">
@@ -33,8 +34,11 @@
           <button>xóa</button>
         </td>
       </tr>
+      <tr>
+
+      </tr>
       </tbody>
     </table>
   </div>
 </div>
-
+</div>
