--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
@@ -60,43 +60,64 @@ li {
 
 .sidebar {
   position: fixed;
-  width: 15%;
+  width: 15%; // Mở rộng hơn để hiển thị nội dung rõ hơn
   height: 100vh;
-  padding-top: 120px;
+  padding: 120px 20px 0 20px ;
+  background: #ffffff;
   border-right: 1px solid #ededed;
-  background: #fff;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  transition: all 0.3s ease;
+
+  .logo {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
   .navigate-option {
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    gap: 10px; // Khoảng cách giữa các mục
 
     .option {
-      width: 100%;
-      padding: 15px 0 15px 20px;
+      display: flex;
+      align-items: center;
+      padding: 12px 20px;
+      font-size: 1.4rem;
+      color: #333;
       cursor: pointer;
-      transition: background 0.3s, border-bottom 0.3s;
-    }
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      font-weight: 500;
 
-    .option:hover {
-      color: #fff;
-      background: var(--primary-color);
-    }
-  }
+      &:hover {
+        background: #f0f5f3;
+        color: var(--primary-color);
+        transform: scale(1.05);
+      }
 
-  .active {
-    color: #fff;
-    background: var(--primary-color);
-    transition: background 0.3s;
+      &.active {
+        background: var(--primary-color);
+        color: #fff;
+        font-weight: 600;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+    }
   }
 }
 
+// Để đảm bảo main không bị tràn ra ngoài
 main {
-  width: 100%;
-  height: 100vh; // Chiều cao cố định trừ đi header
+  padding-left: 15%; // Cập nhật theo sidebar mới
   padding-top: 80px;
-  padding-left: 15%;
-  background: #ccc;
-  overflow-y: auto; // Cho phép cuộn khi nội dung dài hơn
+  height: 100vh; // Adjust height to fit within the viewport
+  overflow: hidden; // Prevent scrolling of the main element
+  width: 100%;
+  background: #f5f5f5;
+  transition: margin-left 0.3s ease;
 }
 
