feat: enhance question component with additional question input fields and styling adjustments

--- a/src/app/layout/header-back/header-back.component.scss
+++ b/src/app/layout/header-back/header-back.component.scss
@@ -38,6 +38,7 @@
 
     button {
       background-color: #f0f5f3;
+      outline: none;
       border: none;
       width: 100%;
       color: #000000;
