--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
@@ -25,6 +25,18 @@
         <div class="answer"><input class="answer-input" placeholder="Type something..." type="text"></div>
       </li>
 
+      <li class="question">
+        <div class="question-name">
+          <p class="question-name-number">Câu 2:</p>
+          <input placeholder="Type something..." class="question-name-input" type="text">
+        </div>
+        <p class="correct-answer">Đáp án đúng</p>
+        <div class="answer correct"><input class="answer-input" placeholder="Type something..." type="text"></div>
+        <p class="other-answer">Đáp án còn lại</p>
+        <div class="answer"><input class="answer-input" placeholder="Type something..." type="text"></div>
+        <div class="answer"><input class="answer-input" placeholder="Type something..." type="text"></div>
+        <div class="answer"><input class="answer-input" placeholder="Type something..." type="text"></div>
+      </li>
     </ul>
   </div>
 </div>
