--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.scss
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.scss
@@ -10,6 +10,7 @@ li {
 
 .question-input-number {
   width: 100%;
+  margin-top: 124px;
   padding: 25px 0;
   background: #008554;
 
@@ -33,9 +34,9 @@ li {
 }
 
 .question-list-wrap {
-  margin: 20px auto 50px;
+  margin: 20px 0 50px 0;
   padding-top: 40px;
-  width: 90%;
+  width: 100%;
 
   .question {
     width: 100%;
