style: refine layout and styling of question bank component for improved UI

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="height: 10000px">
+<div class="container">
   <div class="number-question-wrap">
     <div class="number-question">
       <p>Số câu: 10</p>
