--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
@@ -5,6 +5,8 @@ li {
 .container {
   position: relative;
   width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #fff;
 
   .number-question-wrap {
@@ -33,44 +35,46 @@ li {
     padding-top: 40px;
     width: 90%;
 
-    .question {
-      width: 100%;
-      margin-bottom: 40px;
-      padding: 25px 50px;
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      background-color: #fff;
-
-      .question-name {
-        margin-bottom: 10px;
-        font-size: 20px;
-        font-weight: 600;
-      }
-
-      .correct-answer,
-      .other-answer {
-        font-weight: 600;
-        margin-bottom: 5px;
-      }
-
-      .correct-answer {
-        color: rgb(33, 128, 33);
-      }
-
-      .other-answer {
-        color: rgb(255, 96, 96);
-      }
-
-      .answer {
-        margin-bottom: 8px;
-        padding: 8px 20px;
+    .question-list {
+      .question {
         width: 100%;
+        margin-bottom: 40px;
+        padding: 25px 50px;
         border: 2px solid #ccc;
-        border-radius: 3px;
-      }
+        border-radius: 5px;
+        background-color: #fff;
 
-      .correct {
-        border-color: rgb(33, 128, 33);
+        .question-name {
+          margin-bottom: 10px;
+          font-size: 20px;
+          font-weight: 600;
+        }
+
+        .correct-answer,
+        .other-answer {
+          font-weight: 600;
+          margin-bottom: 5px;
+        }
+
+        .correct-answer {
+          color: rgb(33, 128, 33);
+        }
+
+        .other-answer {
+          color: rgb(255, 96, 96);
+        }
+
+        .answer {
+          margin-bottom: 8px;
+          padding: 8px 20px;
+          width: 100%;
+          border: 2px solid #ccc;
+          border-radius: 3px;
+        }
+
+        .correct {
+          border-color: rgb(33, 128, 33);
+        }
       }
     }
   }
