feat: enhance exam session dashboard with new student list point component and UI improvements

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -28,7 +28,7 @@
         </td>
         <td>{{ exam.duration }}</td>
         <td>{{ exam.type }}</td>
-        <td>{{ exam.create_date }}</td>
+        <td>{{ exam.createDate | date:'dd/MM/yyyy' }}</td>
         <td>
           <button>sửa</button>
           <button>xóa</button>
