--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -13,7 +13,7 @@
       <th>Trạng thái</th>
       <th>Dạng đề bài</th>
     </tr>
-    <tr (click)="navigateExamSessionDashBoard()" *ngFor="let examSession of examSessionList">
+    <tr *ngFor="let examSession of examSessionList" (click)="navigateExamSessionDashBoard(examSession.id)">
       <td>
         <p class="exam-name">{{ examSession.name }} - {{ examSession.description }}</p>
         <p class="class-code">Mã lớp: {{ examSession.code }}</p>
