--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -3,7 +3,7 @@
     <div class="logo">Online Exam Portal</div>
     <nav class="breadcrumb">
       <span>►</span>
-      <span>Kỳ thi: {{exam_session_name}}</span>
+      <span>Kỳ thi:</span>
       <span>►</span>
       <span>Tạo đề mới</span>
     </nav>
