feat: implement exam creation form with UI enhancements and toggle functionality for exam type selection

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -1,1 +1,31 @@
-<p>info works!</p>
+<div class="container">
+  <div class="form-wrap">
+    <form action="" class="form">
+      <h2 class="form-heading">Thông tin bài thi</h2>
+
+      <div class="input-wrap">
+        <label for="exam-name" class="form-desc">Tên bài thi</label>
+        <input id="exam-name" type="text" />
+      </div>
+
+      <div class="exam-type">
+        <p class="form-desc">Loại bài thi</p>
+        <div class="list-wrap" (click)="toggleExamTypeList()">
+          <ul id="examTypeList" class="exam-type-list active">
+            <li class="type">15 phút</li>
+            <li class="type">45 phút</li>
+            <li class="type">60 phút</li>
+            <li class="type">90 phút</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="input-wrap">
+        <label for="exam-password" class="form-desc">Mật khẩu bài thi</label>
+        <input id="exam-password" type="password" />
+      </div>
+
+      <button class="submit">Tạo bài thi</button>
+    </form>
+  </div>
+</div>
