feat: enhance exam session management with exam session ID integration and UI improvements

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -27,7 +27,7 @@
     </ul>
   </div>
   <main>
-    <app-home *ngIf="activeTab === 'home'"></app-home>
+    <app-home [exam_session_id] = "exam_session_id" *ngIf="activeTab === 'home'"></app-home>
     <app-student-list-point *ngIf="activeTab === 'student-list-point'"></app-student-list-point>
     <app-exam [exam_session_id] = "exam_session_id" *ngIf="activeTab === 'exam'"></app-exam>
     <app-question-bank *ngIf="activeTab === 'question-bank'"></app-question-bank>
