--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -1,44 +1,44 @@
 <div class="container">
-<div class="search-bar">
-  <div class="search">
-    <img ngSrc="/icon/find_icon.svg" alt="search icon" class="search-icon" height="16" width="16">
-    <input type="text" [(ngModel)]="searchTerm" (keyup.enter)="filterExam()" (input)="filterExam()" placeholder="Nhập tên đề thi">
-    <div class="create-button">
-      <button (click)="navigateToCreatExam()" >Tạo đề mới</button>
+  <div class="search-bar">
+    <div class="search">
+      <img ngSrc="/icon/find_icon.svg" alt="search icon" class="search-icon" height="16" width="16">
+      <input type="text" [(ngModel)]="searchTerm" (keyup.enter)="filterExam()" (input)="filterExam()" placeholder="Nhập tên đề thi">
+      <div class="create-button">
+        <button (click)="navigateToCreatExam()" >Tạo đề mới</button>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="table-wrapper">
-  <div class="table-container">
-    <table>
-      <thead>
-      <tr>
-        <th>Tên mã đề</th>
-        <th>Thời lượng</th>
-        <th>Dạng đề</th>
-        <th>Ngày tạo</th>
-        <th></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let exam of filteredExams">
-        <td>
-          <p class="exam-name">{{ exam.name }} - {{ exam.description }}</p>
-        </td>
-        <td>{{ exam.duration }}</td>
-        <td>{{ exam.type }}</td>
-        <td>{{ exam.createDate | date:'dd/MM/yyyy' }}</td>
-        <td>
-          <button>sửa</button>
-          <button>xóa</button>
-        </td>
-      </tr>
-      <tr>
+  <div class="table-wrapper">
+    <div class="table-container">
+      <table>
+        <thead class="table-heading">
+        <tr>
+          <th>Tên mã đề</th>
+          <th>Thời lượng</th>
+          <th>Dạng đề</th>
+          <th>Ngày tạo</th>
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let exam of filteredExams">
+          <td>
+            <p class="exam-name">{{ exam.name }} - {{ exam.description }}</p>
+          </td>
+          <td>{{ exam.duration }}</td>
+          <td>{{ exam.type }}</td>
+          <td>{{ exam.createDate | date:'dd/MM/yyyy' }}</td>
+          <td>
+            <button>sửa</button>
+            <button>xóa</button>
+          </td>
+        </tr>
+        <tr>
 
-      </tr>
-      </tbody>
-    </table>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-</div>
 </div>
