--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
@@ -3,7 +3,7 @@ $secondary-color: #02774b;
 $light-gray: #f5f5f5;
 $hover-bg: #f1faff;
 .container{
-  overflow-y: hidden;
+  position: relative;
 }
 .search-bar {
   display: flex;
@@ -74,25 +74,16 @@ $hover-bg: #f1faff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.table-wrapper {
-  padding-top: 55px;
-}
-
 table {
-  position: relative;
-  padding-top: 100px;
   width: 100%;
   border-collapse: collapse;
   border-radius: 8px;
   overflow: hidden;
 }
 
-.table-heading {
-  position: fixed;
+thead {
+  position: sticky;
   top: 0;
-  left: 15%;
-  width: 100%;
-  margin-top: 158px;
   background: $secondary-color;
   color: #fff;
   font-weight: bold;
@@ -102,10 +93,6 @@ th, td {
   padding: 14px;
   text-align: left;
   border-bottom: 1px solid #ddd;
-}
-
-tbody {
-
 }
 
 tbody tr {
